--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_CmbProducto_Inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_CmbProducto_Inventario.cshtml
@@ -16,11 +16,12 @@
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdProductoPadre'] = IdProductoPadre.GetValue(); }";
         settings.Properties.Columns.Add("IdProducto", "ID", 5);
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
+
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.NullText = "== Seleccione ==";
         settings.Properties.AllowNull = true;
     })
     .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.InventarioReportesController().get_list_bajo_demanda,
-    new Core.Erp.Web.Areas.Reportes.Controllers.InventarioReportesController().get_info_bajo_demanda).Bind(Model);
+    new Core.Erp.Web.Areas.Reportes.Controllers.InventarioReportesController().get_info_bajo_demanda).Bind(Model.IdProducto);
 }
 @comboBox.GetHtml()
