--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -580,7 +580,7 @@
         if (IdProveedor.GetValue() > 0 && $("#IdIden_credito").val() != "") {
             var datos = {
                 IdProveedor:  IdProveedor.GetValue(),
-                codigoSRI: $("#IdIden_credito").val,
+                codigoSRI: $("#IdIden_credito").val(),
                 IdEmpresa: $("#IdEmpresa").val()
 
             }
