--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egr_inv_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egr_inv_det.cshtml
@@ -30,10 +30,10 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdProducto"] = 0;
-            e.NewValues["IdUnidadMedida_sinConversion"] = null;
-            e.NewValues["dm_cantidad_sinConversion"] = 0;
-            e.NewValues["mv_costo_sinConversion"] = 0;
+            e.NewValues["IdProducto"] = "";
+            e.NewValues["IdUnidadMedida_sinConversion"] = "UNID";
+            e.NewValues["dm_cantidad_sinConversion"] = "";
+            e.NewValues["mv_costo_sinConversion"] = "";
         };
 
 
