--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Index.cshtml
@@ -9,7 +9,7 @@
 }
 
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Index", "ChequeBanco", FormMethod.Post, new { @role = "form", @class = "form" }))
+@using (Html.BeginForm("Index", "NotaDeDebitoBanco", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     <div class="box collapsed-box">
         <div class="box-header with-border">
