--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbProducto_Factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbProducto_Factura.cshtml
@@ -21,7 +21,7 @@
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
         settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
-
+        settings.Properties.FilterMinLength = 2;
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "SeleccionarLote";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_list_bajo_demandaProducto,
