--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/_CmbProveedor_Importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/_CmbProveedor_Importacion.cshtml
@@ -18,7 +18,9 @@
         settings.Properties.NullText = "== Seleccione ==";
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
-        settings.Properties.Columns.Add("pe_nombreCompleto", "Proveedor", 90);
+        settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
+        settings.Properties.Columns.Add("pe_nombreCompleto", "Proveedor", 70);
+        settings.Properties.FilterMinLength = 3;
     })
     .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.ImportacionReportesController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Reportes.Controllers.ImportacionReportesController().get_info_bajo_demanda)
     .Bind(Model.IdProveedor);
