--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -26,6 +26,7 @@
         })
         $("#vt_tipo_venta").change(function () {
             get_info_termino_pago();
+            CargarCuotas();
         });
         $("#vt_plazo").change(function () {
             cargar_fecha_vencimiento();
