--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
@@ -73,4 +73,4 @@
         grid.SetEditErrorText((string)ViewData["EditError"]);
     }
 }
-@grid.Bind(Model.lst_producto_composicion).GetHtml()
+@grid.Bind(Model.lst_producto_x_bodega).GetHtml()
