--- a/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoCompras/_GridViewPartial_cat_compras.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoCompras/_GridViewPartial_cat_compras.cshtml
@@ -2,9 +2,9 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridView_catipocompras";
-        settings.CallbackRouteValues = new { Controller = "CatalogoTipoCompras", Action = "GridViewPartial_catipocompras" };
-        settings.KeyFieldName = "IdCatalogocompra_tipo";
+        settings.Name = "GridView_cat_compras";
+        settings.CallbackRouteValues = new { Controller = "CatalogoCompras", Action = "GridViewPartial_cat_compras", IdCatalogocompra_tipo = ViewBag.IdCatalogocompra_tipo };
+        settings.KeyFieldName = "IdCatalogocompra";
         settings.Width = Unit.Percentage(100);
 
         //CConfiguracion responsive
@@ -60,8 +60,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdCatalogocompra_tipo = DataBinder.Eval(tc.DataItem, "IdCatalogocompra_tipo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdCatalogocompra_tipo = DataBinder.Eval(tc.DataItem, "IdCatalogocompra_tipo") },
+                Html.ActionLink("Modificar", "Modificar", new { IdCatalogocompra_tipo = ViewBag.IdCatalogocompra_tipo, IdCatalogocompra = DataBinder.Eval(tc.DataItem, "IdCatalogocompra") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdCatalogocompra_tipo = ViewBag.IdCatalogocompra_tipo, IdCatalogocompra = DataBinder.Eval(tc.DataItem, "IdCatalogocompra") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,35 +69,20 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdCatalogocompra_tipo = ViewBag.IdCatalogocompra_tipo }).ToHtmlString()
+
+                    );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdCatalogocompra_tipo", "ID").Width = Unit.Percentage(20);
-        settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(20);
+        settings.Columns.Add("IdCatalogocompra_tipo", "Tipo").Width = Unit.Percentage(20);
+        settings.Columns.Add("CodCatalogo", "Código").Width = Unit.Percentage(20);
+        settings.Columns.Add("Nombre", "Descripción").Width = Unit.Percentage(20);
         settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(20);
-
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "Catálogo";
-            column.Width = Unit.Pixel(100);
-            column.SetDataItemTemplateContent(container =>
-            {
-                if (Convert.ToString(DataBinder.Eval(container.DataItem, "Estado")) == "A")
-                {
-                    Html.DevExpress().HyperLink(hyperlink =>
-                    {
-                        var keyValue = DataBinder.Eval(container.DataItem, "IdCatalogocompra_tipo");
-                        hyperlink.Properties.Text = "Catálogos";
-                        hyperlink.NavigateUrl = Url.Action("Index", "CatalogoCompras", new { IdCatalogocompra_tipo = keyValue });
-                    }).Render();
-                }
-            });
-        });
+        settings.Columns.Add("Orden", "Orden").Width = Unit.Percentage(20);
     });
 }
 @grid.Bind(Model).GetHtml()
