--- a/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoCompras/_GridViewPartial_cat_compras.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoCompras/_GridViewPartial_cat_compras.cshtml
@@ -78,11 +78,13 @@
             c.Width = Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdCatalogocompra_tipo", "Tipo").Width = Unit.Percentage(20);
-        settings.Columns.Add("CodCatalogo", "Código").Width = Unit.Percentage(20);
+        settings.Columns.Add("IdCatalogocompra_tipo", "Tipo").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdCatalogocompra", "ID").Width = Unit.Percentage(8);
+        settings.Columns.Add("CodCatalogo", "Código").Width = Unit.Percentage(10);
+        settings.Columns.Add("Abrebiatura", "Abreviatura").Width = Unit.Percentage(10);
         settings.Columns.Add("Nombre", "Descripción").Width = Unit.Percentage(20);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(20);
-        settings.Columns.Add("Orden", "Orden").Width = Unit.Percentage(20);
+        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add("Orden", "Orden").Width = Unit.Percentage(10);
     });
 }
 @grid.Bind(Model).GetHtml()
