--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
@@ -4,18 +4,17 @@
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_producto_por_bodega";
         settings.CallbackRouteValues = new { Controller = "Producto", Action = "GridViewPartial_producto_por_bodega", IdProducto = Model == null ? 0 : Model.IdProducto };
-        settings.KeyFieldName = "secuencia";
+        settings.KeyFieldName = "Secuencia  ";
         settings.Width = Unit.Percentage(100);
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Producto", Action = "EditingAddNew" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Producto", Action = "EditingUpdate" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Producto", Action = "EditingDelete" };
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Producto", Action = "EditingAddNew_pro_x_bod" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Producto", Action = "EditingUpdate_pro_x_bod" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Producto", Action = "EditingDelete_pro_x_bod" };
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsBehavior.ConfirmDelete = true;
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
-        settings.CommandColumn.ShowEditButton = true;
 
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
@@ -29,13 +28,7 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.InitNewRow = (s, e) =>
-        {
-            e.NewValues["IdProductoHijo"] = 0;
-            e.NewValues["IdUnidadMedida"] = null;
-            e.NewValues["Cantidad"] = 0;
-        };
-
+      
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdSucursal";
@@ -55,7 +48,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdBodega";
-            column.Caption = "Sucursal";
+            column.Caption = "Bodega";
             column.Width = Unit.Percentage(35);
             column.EditorProperties().ComboBox(p =>
             {
