--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas_det.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_deuda_det";
-        settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_deuda_det", Area = "CuentasPorPagar" };
+        settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_deudas_det", Area = "CuentasPorPagar" };
         settings.KeyFieldName = "Secuencia";
 
         settings.Width = Unit.Percentage(100);
@@ -87,4 +87,4 @@
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
-@grid.Bind(Model).GetHtml()
+@grid.Bind(Model.lst_det).GetHtml()
